--- a/README
+++ b/README
@@ -1,3 +1,15 @@
 
 도커를 작동시킬려고 했으나 제대로 작동하지 않고 깜빡깜빡 거립니다.
 혹시나 해결방안 아시는 분 계시면...한 번만 봐주시면 감사하겠습니다...
+
+HTML 파일은 src > main > resource > template 파일 안에다가 넣어주시면 됩니다!!
+
+백엔드는 src > main > java > edu.yonsei.Studymate 파일 내에서 작업해주시면 되겠습니다.
+URL은 스토리보드 참고해서 만드시면 됩니다.
+
+Dto : 변수 저장용
+entity : table 불러와서 값 저장
+repository : service에서 사용할 함수 선언
+service : 실질적인 함수 정의 (SQL문 기준으로 작성했어야하는 거 잊지 말아주세요)
+CrudController : URL로 어떤 데이터가 들어오면 처리
+StudymateApplication : 메인함수.
