--- a/README
+++ b/README
@@ -1,12 +1,9 @@
+#Front End ( 주 : 이채연 )
+src > main > resource > template 파일 안에다가 완료된 작업을 넣어주시면 됩니다.
+반응형 웹을 만드는 것이 중요합니다. device는 휴대폰, 태블릿, 윈도우 정도로만 생각 중인데 어렵다고 느끼시면 말씀하세요
 
-도커를 작동시킬려고 했으나 제대로 작동하지 않고 깜빡깜빡 거립니다.
-혹시나 해결방안 아시는 분 계시면...한 번만 봐주시면 감사하겠습니다...
-
-# HTML 파일은 src > main > resource > template 파일 안에다가 넣어주시면 됩니다!!
-
-백엔드는 src > main > java > edu.yonsei.Studymate 파일 내에서 작업해주시면 되겠습니다.
-URL은 스토리보드 참고해서 만드시면 됩니다.
-
+#Back End ( 주 : 한인찬 )
+src > main > java > edu.yonsei.Studymate 파일 내에서 작업
 Dto : 변수 저장용
 entity : table 불러와서 값 저장
 repository : service에서 사용할 함수 선언
